# BBD-BAW

./: README.md  SECURITY.md  docker-compose-https.yml  docker-compose.yml  generate_ssl.sh  nginx.conf  pyproject.toml
dockerfiles/: Dockerfile_fastapi
src/: __init__.py  main.py
src/admins/: views.py
src/auth/: dependencies.py  schemas.py  views.py
src/cart/: __init__.py  schemas.py  views.py
src/database/: __init__.py  models.py  utils.py  views.py
src/orders/: __init__.py  schemas.py  views.py
src/products/: schemas.py  views.py
src/stats/: views.py
src/users/: views.py
